# xpp

robots/xpp_aliengo/: CMakeLists.txt  package.xml
robots/xpp_aliengo/include/xpp_aliengo/: aliengoleg_inverse_kinematics.h  inverse_kinematics_aliengo.h
robots/xpp_aliengo/launch/: aliengo.launch  all.launch
robots/xpp_aliengo/src/: aliengoleg_inverse_kinematics.cc  inverse_kinematics_aliengo.cc
robots/xpp_aliengo/src/exe/: urdf_visualizer_aliengo.cc
robots/xpp_aliengo/urdf/: aliengo copy.urdf  aliengo.urdf
robots/xpp_hyq/urdf/: hyq.urdf
robots/xpp_minimal/: CMakeLists.txt  package.xml
robots/xpp_minimal/launch/: minimal.launch
robots/xpp_minimal/rviz/: xpp_hyq.rviz
robots/xpp_minimal/src/exe/: urdf_visualizer_minimal.cc
xpp_examples/launch/: minimal_bag.launch
xpp_examples/rviz/: xpp_minimal.rviz
