<package format="2">
  <name>xpp_aliengo</name>
  <version>1.2.4</version>
  <description>
  This package provides visualizing xpp_aliengo capability.
  </description>
  <maintainer email="jkim3662@gatech.edu">PR-xpp_aliengo</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>xacro</depend>
  <depend>roscpp</depend>
  <depend>xpp_vis</depend>
</package>
